filter overlap fix

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ nav .nav-menu {
 	flex-direction: row;
 	list-style: none;
 }
+
 .nav-menu a li {
 	padding: 5px;
 	border: 3px solid transparent;
@@ -221,5 +222,8 @@ nav,
 	.nav-menu .logo-container,
 	.nav-menu .site-title-container {
 		display: flex;
+	}
+	.nav-menu {
+		z-index: 2;
 	}
 }
